--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 asgiref==3.4.1
-backports.zoneinfo==0.2.1
 Django==3.2.25
 django-rest-framework==0.1.0
 djangorestframework==3.15.1
 importlib-resources==5.4.0
+mysqlclient==2.2.4
 pytz==2024.1
 sqlparse==0.4.4
 typing_extensions==4.1.1
+tzdata==2024.1
 zipp==3.6.0
