--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 asgiref==3.8.1
-Django==5.0.4
+Django==5.0.6
 django-rest-framework==0.1.0
 djangorestframework==3.15.1
-importlib-resources==5.4.0
+importlib_resources==6.4.0
 mysqlclient==2.2.4
 pytz==2024.1
-sqlparse==0.4.4
-typing_extensions==4.1.1
+sqlparse==0.5.0
+typing_extensions==4.11.0
 tzdata==2024.1
-zipp==3.6.0
+zipp==3.18.2
